--- a/app/src/main/res/layout/activity_event_flow_second.xml
+++ b/app/src/main/res/layout/activity_event_flow_second.xml
@@ -10,25 +10,43 @@
         android:orientation="vertical">
 
         <TextView
-            android:id="@+id/tv_text"
+            android:id="@+id/tv_application_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/contentMedium"
             android:layout_marginEnd="@dimen/contentMedium"
-            android:layout_marginBottom="@dimen/contentMedium"
             android:gravity="center_horizontal"
-            android:hint="文本接收" />
+            android:hint="全局范围消息" />
+
+        <TextView
+            android:id="@+id/tv_range_text"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/contentMedium"
+            android:layout_marginTop="@dimen/contentMedium"
+            android:layout_marginEnd="@dimen/contentMedium"
+            android:gravity="center_horizontal"
+            android:hint="Activity 范围消息" />
 
         <com.google.android.material.button.MaterialButton
-            android:id="@+id/btn_post_event"
+            android:id="@+id/btn_send_global"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="post event in current activity" />
+            android:layout_marginTop="@dimen/contentMedium"
+            android:text="发送 全局 范围内消息" />
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/btn_send_range"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="发送 Activity 范围内消息" />
 
         <androidx.fragment.app.FragmentContainerView
+            android:id="@+id/fragment_event"
             android:name="com.chooongg.learn.eventFlow.EventFlowFragment"
-            android:layout_width="200dp"
-            android:layout_height="200dp" />
+            android:layout_width="match_parent"
+            android:layout_height="300dp"
+            android:layout_marginTop="@dimen/contentMedium" />
 
     </androidx.appcompat.widget.LinearLayoutCompat>
 
