--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -6,9 +6,9 @@
 
     <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/iv_logo"
-        android:layout_width="@dimen/d72"
-        android:layout_height="@dimen/d72"
-        android:src="@mipmap/ic_launcher"
+        android:layout_width="196dp"
+        android:layout_height="196dp"
+        android:src="@drawable/ic_launcher_foreground"
         app:layout_constraintBottom_toTopOf="@id/tv_app_name"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -19,7 +19,6 @@
         android:id="@+id/tv_app_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/contentMedium"
         android:text="@string/app_name"
         android:textAppearance="?textAppearanceBodyLarge"
         app:layout_constraintBottom_toBottomOf="parent"
