--- a/app/src/main/res/layout/item_main.xml
+++ b/app/src/main/res/layout/item_main.xml
@@ -14,3 +14,28 @@
     app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Medium"
     tools:icon="@drawable/ic_top_app_bar_back"
     tools:text="功能" />
+
+    <!--<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"-->
+    <!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
+    <!--    xmlns:tools="http://schemas.android.com/tools"-->
+    <!--    android:id="@+id/card_view"-->
+    <!--    android:layout_width="match_parent"-->
+    <!--    android:layout_height="wrap_content">-->
+
+    <!--    <com.google.android.material.button.MaterialButton-->
+    <!--        android:id="@+id/btn"-->
+    <!--        style="@style/Widget.Material3.Button.TextButton"-->
+    <!--        android:layout_width="match_parent"-->
+    <!--        android:layout_height="wrap_content"-->
+    <!--        android:background="@null"-->
+    <!--        android:clickable="false"-->
+    <!--        android:insetTop="0dp"-->
+    <!--        android:insetBottom="0dp"-->
+    <!--        android:paddingBottom="@dimen/contentMedium"-->
+    <!--        app:iconGravity="textTop"-->
+    <!--        app:iconSize="@dimen/d48"-->
+    <!--        app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Medium"-->
+    <!--        tools:icon="@drawable/ic_top_app_bar_back"-->
+    <!--        tools:text="功能" />-->
+
+    <!--</com.google.android.material.card.MaterialCardView>-->
