--- a/core/src/main/res/values/learn_themes.xml
+++ b/core/src/main/res/values/learn_themes.xml
@@ -34,8 +34,8 @@
     </style>
 
     <style name="LearnWindowAnimation" parent="@android:style/Animation.Activity">
-        <item name="android:windowEnterAnimation">@anim/shared_axis_y_enter</item>
-        <item name="android:windowExitAnimation">@anim/shared_axis_y_exit</item>
+        <item name="android:windowEnterAnimation">@anim/fade_in</item>
+        <item name="android:windowExitAnimation">@anim/fade_out</item>
         <item name="android:activityOpenEnterAnimation">@anim/shared_axis_y_enter</item>
         <item name="android:activityOpenExitAnimation">@anim/nothing</item>
         <item name="android:activityCloseExitAnimation">@anim/shared_axis_y_exit</item>
