修改顶部应用栏设置

--- a/core/src/main/res/values/attrs.xml
+++ b/core/src/main/res/values/attrs.xml
@@ -89,8 +89,10 @@
         <attr name="navigationType" />
         <attr name="title" />
         <attr name="titleCentered" />
+        <attr name="titleTextAppearance" />
         <attr name="subtitle" />
         <attr name="subtitleCentered" />
+        <attr name="subtitleTextAppearance" />
         <attr name="titleMargin" format="dimension" />
         <attr name="titleMarginStart" format="dimension" />
         <attr name="titleMarginEnd" format="dimension" />
