--- a/app/src/main/res/layout/activity_top_app_bar.xml
+++ b/app/src/main/res/layout/activity_top_app_bar.xml
@@ -2,6 +2,7 @@
 <com.chooongg.core.widget.TopAppBarLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
+    android:id="@+id/top_appbar_Layout"
     android:layout_height="match_parent">
 
     <androidx.core.widget.NestedScrollView
