--- a/core/src/main/res/anim/shared_axis_y_enter.xml
+++ b/core/src/main/res/anim/shared_axis_y_enter.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<set xmlns:android="http://schemas.android.com/apk/res/android"
-    android:duration="@android:integer/config_shortAnimTime"
-    android:interpolator="@android:anim/accelerate_decelerate_interpolator">
+<set xmlns:android="http://schemas.android.com/apk/res/android">
     <alpha
+        android:duration="100"
         android:fromAlpha="0.0"
         android:toAlpha="1.0" />
     <translate
+        android:duration="200"
         android:fromYDelta="5%p"
+        android:interpolator="?motionEasingStandardInterpolator"
         android:toYDelta="0" />
 </set>
