--- a/core/src/main/res/anim/shared_axis_y_exit.xml
+++ b/core/src/main/res/anim/shared_axis_y_exit.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<set xmlns:android="http://schemas.android.com/apk/res/android"
-    android:duration="@android:integer/config_shortAnimTime"
-    android:interpolator="@android:anim/accelerate_decelerate_interpolator">
+<set xmlns:android="http://schemas.android.com/apk/res/android">
     <alpha
+        android:duration="100"
         android:fromAlpha="1.0"
+        android:startOffset="100"
         android:toAlpha="0.0" />
     <translate
+        android:duration="200"
         android:fromYDelta="0"
+        android:interpolator="?motionEasingStandardInterpolator"
         android:toYDelta="5%p" />
 </set>
