--- a/core/src/main/res/layout/learn_top_app_bar_large.xml
+++ b/core/src/main/res/layout/learn_top_app_bar_large.xml
@@ -5,6 +5,7 @@
     android:id="@+id/appbar_layout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    style="@style/Widget.Learn.AppBarLayout.Primary"
     android:fitsSystemWindows="true">
 
     <com.google.android.material.appbar.CollapsingToolbarLayout
