TopAppBarLayout.kt 新增maxLines属性

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,9 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    app:appBarType="medium"
-    app:expandedTitleGravity="center_horizontal|bottom"
-    app:expandedTitleMarginBottom="@dimen/d32">
+    app:titleCollapseMode="scale"
+    app:appBarType="medium">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_view"
