--- a/app/src/main/res/layout/activity_event_flow.xml
+++ b/app/src/main/res/layout/activity_event_flow.xml
@@ -6,6 +6,7 @@
     <androidx.appcompat.widget.LinearLayoutCompat
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="?android:colorBackground"
         android:gravity="center"
         android:orientation="vertical">
 
