--- a/app/src/main/res/layout/activity_network.xml
+++ b/app/src/main/res/layout/activity_network.xml
@@ -9,7 +9,8 @@
     <com.chooongg.stateLayout.StateLayout
         android:id="@+id/state_layout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="?android:colorBackground">
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recycler_view"
