--- a/app/src/main/res/layout/activity_top_app_bar.xml
+++ b/app/src/main/res/layout/activity_top_app_bar.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.chooongg.core.widget.TopAppBarLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
     android:id="@+id/top_appbar_Layout"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="?android:colorBackground"
         android:overScrollMode="never">
 
         <androidx.appcompat.widget.LinearLayoutCompat
@@ -243,9 +244,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/d2"
-                android:layout_marginBottom="@dimen/d48"
                 android:layout_marginTop="@dimen/contentLarge"
                 android:layout_marginEnd="@dimen/d2"
+                android:layout_marginBottom="@dimen/d48"
                 app:cardCornerRadius="0dp">
 
                 <com.chooongg.core.widget.TopAppBar
