--- a/app/src/main/res/layout/activity_top_app_bar_layout_medium.xml
+++ b/app/src/main/res/layout/activity_top_app_bar_layout_medium.xml
@@ -10,6 +10,6 @@
         android:id="@+id/web_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="?colorSurface" />
+        android:background="?android:colorBackground" />
 
 </com.chooongg.core.widget.TopAppBarLayout>
