--- a/core/src/main/res/layout/learn_activity_loading.xml
+++ b/core/src/main/res/layout/learn_activity_loading.xml
@@ -35,7 +35,7 @@
                 android:indeterminate="true"
                 app:trackCornerRadius="@dimen/d16" />
 
-            <TextView
+            <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/tv_message"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
