--- a/core/src/main/res/layout/item_dialog_permission.xml
+++ b/core/src/main/res/layout/item_dialog_permission.xml
@@ -17,7 +17,7 @@
         app:tint="?attr/colorOnSurface"
         tools:src="@drawable/ic_permission_sensors" />
 
-    <TextView
+    <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/tv_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
