--- a/app/src/main/res/layout/activity_media_picker.xml
+++ b/app/src/main/res/layout/activity_media_picker.xml
@@ -20,8 +20,9 @@
                 android:layout_height="@dimen/d72"
                 android:layout_marginStart="@dimen/contentMedium"
                 android:layout_marginTop="@dimen/contentMedium"
-                app:shapeAppearance="?shapeAppearanceCornerMedium"
-                app:strokeColor="?colorOutline"
+                android:padding="0.5dp"
+                app:shapeAppearance="?shapeAppearanceCornerLarge"
+                app:strokeColor="?colorOnPrimaryContainer"
                 app:strokeWidth="@dimen/divider" />
 
         </androidx.appcompat.widget.LinearLayoutCompat>
