--- a/core/src/main/res/layout/learn_popup_menu_item.xml
+++ b/core/src/main/res/layout/learn_popup_menu_item.xml
@@ -1,46 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="@dimen/d48"
+    android:background="?selectableItemBackground"
     android:clickable="true"
     android:focusable="true"
-    android:background="?selectableItemBackground"
-    android:gravity="center_vertical"
-    android:orientation="horizontal"
-    android:paddingStart="@dimen/contentMedium"
-    android:paddingEnd="@dimen/contentMedium">
+    android:gravity="center_vertical">
 
     <androidx.appcompat.widget.AppCompatImageView
-        android:id="@+id/icon"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical"
-        android:layout_marginEnd="@dimen/contentMedium"
-        android:scaleType="centerInside"
+        android:id="@+id/iv_icon"
+        android:layout_width="@dimen/d48"
+        android:layout_height="@dimen/d48"
+        android:padding="@dimen/d12"
+        android:scaleType="centerCrop"
         tools:src="@drawable/abc_ic_voice_search_api_material" />
 
-    <TextView
-        android:id="@+id/title"
+    <com.chooongg.core.widget.MarqueeTextView
+        android:id="@+id/tv_label"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:duplicateParentState="true"
-        android:ellipsize="marquee"
-        android:gravity="center_horizontal"
-        android:fadingEdge="horizontal"
+        android:fadingEdgeLength="@dimen/contentSmall"
+        android:requiresFadingEdge="horizontal"
         android:singleLine="true"
         android:textAppearance="?attr/textAppearanceListItemSmall" />
 
     <androidx.appcompat.widget.AppCompatImageView
-        android:id="@+id/icon_nested"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/contentMedium"
-        android:visibility="gone"
+        android:id="@+id/iv_nested"
+        android:layout_width="@dimen/d48"
+        android:layout_height="@dimen/d48"
+        android:padding="@dimen/d12"
         app:srcCompat="@drawable/learn_ic_menu_end"
-        app:tint="?attr/colorControlNormal"
-        tools:visibility="visible" />
+        app:tint="?attr/colorControlNormal" />
 
-</LinearLayout>
+</androidx.appcompat.widget.LinearLayoutCompat>
