--- a/mediaPicker/src/main/res/layout/learn_activity_media_picker.xml
+++ b/mediaPicker/src/main/res/layout/learn_activity_media_picker.xml
@@ -32,7 +32,7 @@
         android:layout_gravity="bottom"
         app:contentInsetStart="@dimen/contentSmall"
         app:fabAlignmentMode="end"
-        app:fabAnchorMode="cradle"
+        app:fabAnchorMode="embed"
         app:fabAnimationMode="slide"
         app:hideOnScroll="true"
         app:menuAlignmentMode="auto"
@@ -98,12 +98,5 @@
         android:src="@drawable/ic_permission_location"
         android:visibility="gone"
         app:layout_anchor="@id/bottom_app_bar" />
-
-    <com.google.android.material.bottomsheet.BottomSheetDragHandleView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-
-    </com.google.android.material.bottomsheet.BottomSheetDragHandleView>
 
 </com.chooongg.core.widget.TopAppBarLayout>
