--- a/core/src/main/res/values/learn_themes.xml
+++ b/core/src/main/res/values/learn_themes.xml
@@ -28,7 +28,7 @@
 
     <style name="Theme.Learn.primarySurface" parent="Theme.Learn.Primary" />
 
-    <style name="Base.Theme.Learn" parent="Theme.Material3.DayNight">
+    <style name="Base.Theme.Learn" parent="Theme.Material3.DayNight.NoActionBar">
         <item name="android:colorBackground">?colorSurface</item>
         <item name="windowActionModeOverlay">false</item>
         <item name="android:configChanges">orientation|keyboardHidden|screenSize</item>
