--- a/core/src/main/res/values/learn_themes.xml
+++ b/core/src/main/res/values/learn_themes.xml
@@ -31,6 +31,7 @@
     <style name="Base.Theme.Learn" parent="Theme.Material3.DayNight.NoActionBar">
         <item name="android:colorBackground">?colorSurface</item>
         <item name="windowActionModeOverlay">false</item>
+        <item name="android:windowContentTransitions">true</item>
         <item name="android:configChanges">orientation|keyboardHidden|screenSize</item>
         <item name="android:statusBarColor">@android:color/transparent</item>
         <item name="android:windowAnimationStyle">@style/LearnWindowAnimation</item>
