--- a/app/src/main/res/layout/activity_media_picker.xml
+++ b/app/src/main/res/layout/activity_media_picker.xml
@@ -21,6 +21,7 @@
                 android:layout_marginStart="@dimen/contentMedium"
                 android:layout_marginTop="@dimen/contentMedium"
                 android:padding="0.5dp"
+                android:scaleType="centerCrop"
                 app:shapeAppearance="?shapeAppearanceCornerLarge"
                 app:strokeColor="?colorOnPrimaryContainer"
                 app:strokeWidth="@dimen/divider" />
