--- a/core/src/main/res/layout/learn_top_app_bar_medium.xml
+++ b/core/src/main/res/layout/learn_top_app_bar_medium.xml
@@ -5,7 +5,8 @@
     android:id="@+id/appbar_layout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:fitsSystemWindows="true">
+    android:fitsSystemWindows="true"
+    app:layout_behavior="com.chooongg.core.widget.behavior.AppBarLayoutBehavior">
 
     <com.google.android.material.appbar.CollapsingToolbarLayout
         android:id="@+id/collapsing_toolbar_layout"
